--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-node_modules
+# Node.js dependencies
+node_modules/
+package-lock.json
+
+# TypeScript build output
+dist/
+tsconfig.tsbuildinfo
+
+# Environment variables
+.env
